# sdks

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  justfile  knope.toml
.changeset/: dep-picomatch.md  dep-rustls-webpki.md  ts-browser-compat.md  v0.2.0-backfill.md
.github/workflows/: ci.yml  docs.yml  integration.yml  prepare-release.yml  release.yml
abi/mainnet/: order-book-registry-abi.json  order-book-whitelist-abi.json  trade-account-oracle-storage_slots.json
abi/testnet/: trade-account-oracle-abi.json  trade-account-storage_slots.json
mainnet/: order-book-abi.json  order-book-storage_slots.json  trade-account-abi.json  trade-account-registry-abi.json
sdks/python/: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
sdks/python/docs/: Makefile  changelog.rst  concepts.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
sdks/python/docs/_templates/sidebar/: brand.html
sdks/python/docs/api/: client.rst  config.rst  crypto.rst  encoding.rst  errors.rst  low_level_api.rst  models.rst  websocket.rst
sdks/python/docs/guides/: error_handling.rst  external_signers.rst  identifiers.rst  market_data.rst  trading.rst  websocket_streams.rst
sdks/python/examples/: market_maker.py  portfolio.py  quickstart.py  taker_bot.py
sdks/python/src/o2_sdk/: __init__.py  api.py  client.py  config.py  crypto.py  encoding.py  errors.py  models.py  onchain_revert.py  websocket.py
sdks/python/tests/: test_client.py  test_crypto.py  test_encoding.py  test_integration.py  test_models.py  test_onchain_revert.py
sdks/rust/: AGENTS.md  Cargo.toml  README.md  TEMP_REVIEW_TRACKER.md
sdks/rust/docs/guides/: error-handling.md  external-signers.md  identifiers.md  market-data.md  trading.md  websocket-streams.md
sdks/rust/examples/: market_maker.rs  portfolio.rs  quickstart.rs  taker_bot.rs
sdks/rust/src/: api.rs  client.rs  config.rs  crypto.rs  decimal.rs  encoding.rs  errors.rs  guides.rs  lib.rs  models.rs  onchain_revert.rs  websocket.rs
sdks/rust/tests/: crypto_tests.rs  encoding_tests.rs  integration_tests.rs  websocket_tests.rs
sdks/typescript/: AGENTS.md  CHANGELOG.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
sdks/typescript/docs/: index.md  quickstart.md
sdks/typescript/docs/guides/: error-handling.md  external-signers.md  identifiers.md  market-data.md  trading.md  websocket-streams.md
sdks/typescript/examples/: market-maker.ts  portfolio.ts  quickstart.ts  taker-bot.ts
sdks/typescript/src/: actions.ts  api.ts  client.ts  config.ts  crypto.ts  encoding.ts  errors.ts  index.ts  internals.ts  models.ts  onchain-revert.ts  websocket.ts
sdks/typescript/tests/: api.test.ts  client.test.ts  crypto.test.ts  encoding.test.ts  integration.test.ts  models.test.ts  onchain-revert.test.ts  websocket.test.ts
sdks/typescript/tests/browser/: playwright-integration.mjs  playwright-smoke.mjs
sdks/typescript/tests/browser/fixtures/: integration.html  integration.js  smoke.html  smoke.js
testnet/: order-book-blacklist-abi.json  order-book-proxy-abi.json  trade-account-proxy-abi.json
